whole bunch of tuning scavenging related changes to the Pb notebooks

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,12 @@
     "bdy_NCB = (1598,2177,778,798) # Northern Canada Basin \n",
     "bdy_WCB = (2168,2178,390,797) # Western Canada Basin \n",
     "bdy_LS  = (1140,1150,446,672) # Baffin Bay\n",
-    "bdy_HB  = (1190,1472,291,301) # Hudson Bay"
+    "bdy_HB  = (1190,1472,293,303) # Hudson Bay"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,8 +314,10 @@
     "            \"x4\": np.zeros(np.max(dPb_west_BC.shape))\n",
     "        },\n",
     "    )\n",
-    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-202209-forcing/Pb_OBC_y{year}m{month:02}.nc', \\\n",
+    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/Pb_OBC_y{year}m{month:02}.nc', \\\n",
     "                         unlimited_dims='time_counter')\n",
+    "#     file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-202209-forcing/Pb_OBC_y{year}m{month:02}.nc', \\\n",
+    "#                          unlimited_dims='time_counter')\n",
     "    \n",
     "    return"
    ]
@@ -329,103 +331,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2002\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2003\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2004\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2005\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2006\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2007\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2008\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2009\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2010\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2011\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2012\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2013\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2014\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2015\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2016\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2017\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2018\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2019\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
       "2020\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
@@ -435,7 +347,7 @@
     }
    ],
    "source": [
-    "for year in range(2002,2021):\n",
+    "for year in range(2020,2021):\n",
     "\n",
     "    print(year)\n",
     "    LS_T  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));     LS_S  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));\n",
@@ -443,7 +355,7 @@
     "    wCB_T = np.zeros((12,50,bdy_WCB[1]-bdy_WCB[0],bdy_WCB[3]-bdy_WCB[2])); wCB_S = np.zeros((12,50,bdy_WCB[1]-bdy_WCB[0],bdy_WCB[3]-bdy_WCB[2]));\n",
     "    HB_T  = np.zeros((12,50,bdy_HB[1]-bdy_HB[0],bdy_HB[3]-bdy_HB[2]));     HB_S  = np.zeros((12,50,bdy_HB[1]-bdy_HB[0],bdy_HB[3]-bdy_HB[2]));\n",
     "\n",
-    "    for month in range(1,12):\n",
+    "    for month in range(1,13):\n",
     "        temp, sal  = load_climatology(year, f'{month:02}')\n",
     "\n",
     "        LS_T[month-1,:,:,:]  = temp[:,bdy_LS[0]:bdy_LS[1],bdy_LS[2]:bdy_LS[3]]\n",
@@ -454,7 +366,6 @@
     "        wCB_S[month-1,:,:,:] = sal[:,bdy_WCB[0]:bdy_WCB[1],bdy_WCB[2]:bdy_WCB[3]]\n",
     "        HB_T[month-1,:,:,:]  = temp[:,bdy_HB[0]:bdy_HB[1],bdy_HB[2]:bdy_HB[3]] \n",
     "        HB_S[month-1,:,:,:]  = sal[:,bdy_HB[0]:bdy_HB[1],bdy_HB[2]:bdy_HB[3]]\n",
-    "        \n",
     "    \n",
     "    # Create boundary conditions:\n",
     "    LS_depth = np.tile(depths, (bdy_LS[3]-bdy_LS[2],rimwidthS,1)).transpose()\n",
@@ -468,10 +379,11 @@
     "            dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=True)\n",
     "        else:\n",
     "            dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=False)\n",
+    "        \n",
     "        dPb_nCB[month-1,:,:,:] = create_AO_BC(nCB_T[month-1], nCB_S[month-1])\n",
     "        dPb_wCB[month-1,:,:,:] = create_AO_BC(wCB_T[month-1], wCB_S[month-1])\n",
-    "        dPb_HB[month-1,:,:,:]  = create_HB_BC(HB_T[month-1] , HB_S[month-1])\n",
-    "\n",
+    "        dPb_HB[month-1,:,:,:]  = create_HB_BC(HB_T[month-1] , HB_S[month-1])    \n",
+    "    \n",
     "    dPb_LS[np.isnan(dPb_LS)]   = 3e-12\n",
     "    dPb_nCB[np.isnan(dPb_nCB)] = 3e-12\n",
     "    dPb_wCB[np.isnan(dPb_wCB)] = 3e-12\n",
