--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -170,7 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_file(folder, litho_array, bio_array, year, month):    \n",
+    "def save_file(folder, litho_array, bio_array, year, month):   \n",
+    "    \n",
     "    file_write = xr.Dataset(\n",
     "        {'lithogenic' : ((\"deptht\",\"y\",\"x\"), litho_array),\n",
     "         'biogenic' : ((\"deptht\",\"y\",\"x\"), bio_array)}, \n",
@@ -182,7 +183,7 @@
     "    )\n",
     "    file_write.to_netcdf(f'{folder}Pb_scavenging_y{year}m{month:02}.nc', \\\n",
     "                         unlimited_dims='time_counter')\n",
-    "    \n",
+    "\n",
     "    return"
    ]
   },
@@ -208,6 +209,10 @@
     "    wsink[depths > 80] = (0.05*(depths[depths > 80]-80)+16)/(3600*24) \n",
     "    pop_ANHA4          = np.array([jp_pop_ANHA4[d,:,:] / wsink[d] for d in range(0,len(depths))])\n",
     "    \n",
+    "    # Fill NaN values with mean\n",
+    "    pop_ANHA4[np.isnan(pop_ANHA4)] = np.nanmean(pop_ANHA4)\n",
+    "    pop_ANHA4[pop_ANHA4 < 0] = 0\n",
+    "    \n",
     "    # interpolate from ANHA4 to ANHA12 grid:\n",
     "    ANHA12_jp_pop = np.empty((50,isize,jsize))\n",
     "    for depth in range(0,50):\n",
@@ -215,8 +220,6 @@
     "    \n",
     "        ANHA12_jp_pop[depth,:,:] = interpolator(np.array([ANHA12_lons.flatten(), ANHA12_lats.flatten()]).transpose()).reshape(ANHA12_lons.shape)\n",
     "\n",
-    "    ANHA12_jp_pop[ANHA12_jp_pop < 0] = 0\n",
-    "    \n",
     "    return ANHA12_jp_pop\n",
     "\n",
     "def load_litho(year, month):\n",
@@ -230,35 +233,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b2f9a584-e2fd-4528-9359-ff9f04e84730",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_particle_fields(year, month, max_bio=np.nan, max_litho=np.nan, save=False, beta=np.nan):\n",
-    "    ANHA12_biomass = load_bio(year, month)\n",
-    "    ANHA12_litho   = load_litho(year, month)\n",
-    "\n",
+    "    beta = 0.005\n",
+    "    \n",
+    "    ANHA12_biogenic = load_bio(year, month)\n",
+    "    ANHA12_litho    = load_litho(year, month)\n",
+    "    \n",
     "    # particles: normalize by maximum value within domain over the course of the full time series\n",
-    "    normalized_biogenic   = ANHA12_biomass / max_bio \n",
+    "    normalized_biogenic   = ANHA12_biogenic / max_bio \n",
     "    normalized_lithogenic = ANHA12_litho / max_litho \n",
     "\n",
     "    # initialize arrays with some small value, then fill with normalized particle fields:\n",
-    "    lithogenic_particles = np.ones(mesh_bathy.shape)*0.01\n",
-    "    biogenic_particles   = np.ones(mesh_bathy.shape)*0.01\n",
+    "    lithogenic_particles = np.ones(mesh_bathy.shape)*0.10\n",
+    "    biogenic_particles   = np.ones(mesh_bathy.shape)*0.10\n",
     "    lithogenic_particles[:,imin:imax,jmin:jmax] = normalized_lithogenic\n",
     "    biogenic_particles[:,imin:imax,jmin:jmax]   = normalized_biogenic\n",
+    "    \n",
+    "    # Fill any weird values \n",
+    "    biogenic_particles[biogenic_particles <= 0]          = 0.10\n",
+    "    biogenic_particles[np.isnan(biogenic_particles)]     = 0.10\n",
+    "    lithogenic_particles[lithogenic_particles <= 0]      = 0.0\n",
+    "    lithogenic_particles[np.isnan(lithogenic_particles)] = 0.0\n",
+    "    \n",
+    "    if np.any(lithogenic_particles < 0):\n",
+    "        print('negative lithogenic')\n",
+    "    \n",
+    "    if np.any(biogenic_particles < 0):\n",
+    "        print('negative biogenic')\n",
     "    \n",
     "    if save:\n",
     "        if np.isnan(beta):\n",
     "            print('need to define beta')\n",
     "        else:\n",
     "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/'\n",
-    "            betas  = [0.005, 0.01]\n",
+    "            betas  = [0.005]\n",
     "            save_file(f'{folder}particle0005/', lithogenic_particles*betas[0], biogenic_particles*(1-betas[0]), year, month)\n",
-    "            save_file(f'{folder}particle001/' , lithogenic_particles*betas[1], biogenic_particles*(1-betas[1]), year, month)\n",
+    "#             save_file(f'{folder}particle001/' , lithogenic_particles*betas[1], biogenic_particles*(1-betas[1]), year, month)\n",
     "    \n",
-    "    return ANHA12_litho, ANHA12_biomass #lithogenic_particles, biogenic_particles"
+    "    return lithogenic_particles, biogenic_particles"
    ]
   },
   {
@@ -326,42 +343,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "2b9f907d-a62b-498c-a22c-5d0419109f45",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.712349976898622e-08 1.8331377305003116e-07\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.nanmax(max_bio_list), np.nanmax(max_litho_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "f3c854fc-32f3-40e3-afb5-c31c34c7b07a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.00025446689687669277 1.8331377305003116e-07\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.nanmax(max_bio_list), np.nanmax(max_litho_list))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "261430d6-7526-4907-84dd-477f80f2d565",
    "metadata": {},
@@ -371,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "434d3957-2aea-4238-8706-6d76e02646cd",
    "metadata": {},
    "outputs": [
@@ -451,12 +432,83 @@
       "2007 10\n",
       "2007 11\n",
       "2007 12\n",
-      "2008 1\n"
+      "2008 1\n",
+      "2008 2\n",
+      "2008 3\n",
+      "2008 4\n",
+      "2008 5\n",
+      "2008 6\n",
+      "2008 7\n",
+      "2008 8\n",
+      "2008 9\n",
+      "2008 10\n",
+      "2008 11\n",
+      "2008 12\n",
+      "2009 1\n",
+      "2009 2\n",
+      "2009 3\n",
+      "2009 4\n",
+      "2009 5\n",
+      "2009 6\n",
+      "2009 7\n",
+      "2009 8\n",
+      "2009 9\n",
+      "2009 10\n",
+      "2009 11\n",
+      "2009 12\n",
+      "2010 1\n",
+      "2010 2\n",
+      "2010 3\n",
+      "2010 4\n",
+      "2010 5\n",
+      "2010 6\n",
+      "2010 7\n",
+      "2010 8\n",
+      "2010 9\n",
+      "2010 10\n",
+      "2010 11\n",
+      "2010 12\n",
+      "2011 1\n",
+      "2011 2\n",
+      "2011 3\n",
+      "2011 4\n",
+      "2011 5\n",
+      "2011 6\n",
+      "2011 7\n",
+      "2011 8\n",
+      "2011 9\n",
+      "2011 10\n",
+      "2011 11\n",
+      "2011 12\n",
+      "2012 1\n",
+      "2012 2\n",
+      "2012 3\n",
+      "2012 4\n",
+      "2012 5\n",
+      "2012 6\n",
+      "2012 7\n",
+      "2012 8\n",
+      "2012 9\n",
+      "2012 10\n",
+      "2012 11\n",
+      "2012 12\n",
+      "2013 1\n",
+      "2013 2\n",
+      "2013 3\n",
+      "2013 4\n",
+      "2013 5\n",
+      "2013 6\n",
+      "2013 7\n",
+      "2013 8\n",
+      "2013 9\n",
+      "2013 10\n",
+      "2013 11\n",
+      "2013 12\n"
      ]
     }
    ],
    "source": [
-    "for year in range(2002, 2010):\n",
+    "for year in range(2002, 2014):\n",
     "    for month in range(1,13):\n",
     "        print(year, month)\n",
     "        litho, bio = create_particle_fields(year, month, max_bio=2.54467e-4, max_litho=1.83314e-7, save=True, beta=0.00)"
