--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -233,7 +233,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
+   "id": "ceb7b992-af5d-4daf-a254-2a3791343077",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import ndimage as nd\n",
+    "\n",
+    "def fill(data, invalid=None):\n",
+    "    \"\"\"\n",
+    "    Replace the value of invalid 'data' cells (indicated by 'invalid') \n",
+    "    by the value of the nearest valid data cell\n",
+    "\n",
+    "    Input:\n",
+    "        data:    numpy array of any dimension\n",
+    "        invalid: a binary array of same shape as 'data'. True cells set where data\n",
+    "                 value should be replaced.\n",
+    "                 If None (default), use: invalid  = np.isnan(data)\n",
+    "\n",
+    "    Output: \n",
+    "        Return a filled array. \n",
+    "    \"\"\"\n",
+    "    #import numpy as np\n",
+    "    #import scipy.ndimage as nd\n",
+    "\n",
+    "    if invalid is None: invalid = np.isnan(data)\n",
+    "\n",
+    "    ind = nd.distance_transform_edt(invalid, return_distances=False, return_indices=True)\n",
+    "    return data[tuple(ind)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "b2f9a584-e2fd-4528-9359-ff9f04e84730",
    "metadata": {},
    "outputs": [],
@@ -253,17 +285,22 @@
     "    biogenic_particles   = np.ones(mesh_bathy.shape)*0.10\n",
     "    lithogenic_particles[:,imin:imax,jmin:jmax] = normalized_lithogenic\n",
     "    biogenic_particles[:,imin:imax,jmin:jmax]   = normalized_biogenic\n",
-    "    \n",
+    "\n",
     "    # Fill any weird values \n",
-    "    biogenic_particles[biogenic_particles <= 0]          = 0.10\n",
-    "    biogenic_particles[np.isnan(biogenic_particles)]     = 0.10\n",
+    "    # https://stackoverflow.com/questions/3662361/fill-in-missing-values-with-nearest-neighbour-in-python-numpy-masked-arrays\n",
+    "#     biogenic_particles_masked = np.ma.masked_where(biogenic_particles<=0, biogenic_particles)\n",
+    "    biogenic_particles_filled = fill(biogenic_particles, invalid=(biogenic_particles<=0))\n",
+    "    biogenic_particles_filled[(mesh_bathy < 0.1)] = 0.00 # fill land with zeros\n",
+    "    \n",
+    "#     biogenic_particles[biogenic_particles <= 0]          = 0.10\n",
+    "#     biogenic_particles[np.isnan(biogenic_particles)]     = 0.10\n",
+    "    \n",
     "    lithogenic_particles[lithogenic_particles <= 0]      = 0.0\n",
     "    lithogenic_particles[np.isnan(lithogenic_particles)] = 0.0\n",
     "    \n",
     "    if np.any(lithogenic_particles < 0):\n",
     "        print('negative lithogenic')\n",
-    "    \n",
-    "    if np.any(biogenic_particles < 0):\n",
+    "    if np.any(biogenic_particles_filled < 0):\n",
     "        print('negative biogenic')\n",
     "    \n",
     "    if save:\n",
@@ -272,10 +309,10 @@
     "        else:\n",
     "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/'\n",
     "            betas  = [0.005]\n",
-    "            save_file(f'{folder}particle0005/', lithogenic_particles*betas[0], biogenic_particles*(1-betas[0]), year, month)\n",
+    "            save_file(f'{folder}particle0005/', lithogenic_particles*betas[0], biogenic_particles_filled*(1-betas[0]), year, month)\n",
     "#             save_file(f'{folder}particle001/' , lithogenic_particles*betas[1], biogenic_particles*(1-betas[1]), year, month)\n",
     "    \n",
-    "    return lithogenic_particles, biogenic_particles"
+    "    return lithogenic_particles, biogenic_particles_filled"
    ]
   },
   {
@@ -352,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "434d3957-2aea-4238-8706-6d76e02646cd",
    "metadata": {},
    "outputs": [
@@ -360,156 +397,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2002 1\n",
-      "2002 2\n",
-      "2002 3\n",
-      "2002 4\n",
-      "2002 5\n",
-      "2002 6\n",
-      "2002 7\n",
-      "2002 8\n",
-      "2002 9\n",
-      "2002 10\n",
-      "2002 11\n",
-      "2002 12\n",
-      "2003 1\n",
-      "2003 2\n",
-      "2003 3\n",
-      "2003 4\n",
-      "2003 5\n",
-      "2003 6\n",
-      "2003 7\n",
-      "2003 8\n",
-      "2003 9\n",
-      "2003 10\n",
-      "2003 11\n",
-      "2003 12\n",
-      "2004 1\n",
-      "2004 2\n",
-      "2004 3\n",
-      "2004 4\n",
-      "2004 5\n",
-      "2004 6\n",
-      "2004 7\n",
-      "2004 8\n",
-      "2004 9\n",
-      "2004 10\n",
-      "2004 11\n",
-      "2004 12\n",
-      "2005 1\n",
-      "2005 2\n",
-      "2005 3\n",
-      "2005 4\n",
-      "2005 5\n",
-      "2005 6\n",
-      "2005 7\n",
-      "2005 8\n",
-      "2005 9\n",
-      "2005 10\n",
-      "2005 11\n",
-      "2005 12\n",
-      "2006 1\n",
-      "2006 2\n",
-      "2006 3\n",
-      "2006 4\n",
-      "2006 5\n",
-      "2006 6\n",
-      "2006 7\n",
-      "2006 8\n",
-      "2006 9\n",
-      "2006 10\n",
-      "2006 11\n",
-      "2006 12\n",
-      "2007 1\n",
-      "2007 2\n",
-      "2007 3\n",
-      "2007 4\n",
-      "2007 5\n",
-      "2007 6\n",
-      "2007 7\n",
-      "2007 8\n",
-      "2007 9\n",
-      "2007 10\n",
-      "2007 11\n",
-      "2007 12\n",
-      "2008 1\n",
-      "2008 2\n",
-      "2008 3\n",
-      "2008 4\n",
-      "2008 5\n",
-      "2008 6\n",
-      "2008 7\n",
-      "2008 8\n",
-      "2008 9\n",
-      "2008 10\n",
-      "2008 11\n",
-      "2008 12\n",
-      "2009 1\n",
-      "2009 2\n",
-      "2009 3\n",
-      "2009 4\n",
-      "2009 5\n",
-      "2009 6\n",
-      "2009 7\n",
-      "2009 8\n",
-      "2009 9\n",
-      "2009 10\n",
-      "2009 11\n",
-      "2009 12\n",
-      "2010 1\n",
-      "2010 2\n",
-      "2010 3\n",
-      "2010 4\n",
-      "2010 5\n",
-      "2010 6\n",
-      "2010 7\n",
-      "2010 8\n",
-      "2010 9\n",
-      "2010 10\n",
-      "2010 11\n",
-      "2010 12\n",
-      "2011 1\n",
-      "2011 2\n",
-      "2011 3\n",
-      "2011 4\n",
-      "2011 5\n",
-      "2011 6\n",
-      "2011 7\n",
-      "2011 8\n",
-      "2011 9\n",
-      "2011 10\n",
-      "2011 11\n",
-      "2011 12\n",
-      "2012 1\n",
-      "2012 2\n",
-      "2012 3\n",
-      "2012 4\n",
-      "2012 5\n",
-      "2012 6\n",
-      "2012 7\n",
-      "2012 8\n",
-      "2012 9\n",
-      "2012 10\n",
-      "2012 11\n",
-      "2012 12\n",
-      "2013 1\n",
-      "2013 2\n",
-      "2013 3\n",
-      "2013 4\n",
-      "2013 5\n",
-      "2013 6\n",
-      "2013 7\n",
-      "2013 8\n",
-      "2013 9\n",
-      "2013 10\n",
-      "2013 11\n",
-      "2013 12\n"
+      "2015 1\n",
+      "2015 2\n",
+      "2015 3\n",
+      "2015 4\n",
+      "2015 5\n",
+      "2015 6\n",
+      "2015 7\n",
+      "2015 8\n",
+      "2015 9\n",
+      "2015 10\n",
+      "2015 11\n",
+      "2015 12\n"
      ]
     }
    ],
    "source": [
-    "for year in range(2002, 2014):\n",
-    "    for month in range(1,13):\n",
+    "for year in range(2014, 2015):\n",
+    "    for month in range(12,13):\n",
     "        print(year, month)\n",
     "        litho, bio = create_particle_fields(year, month, max_bio=2.54467e-4, max_litho=1.83314e-7, save=True, beta=0.00)"
    ]
@@ -525,12 +430,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "d2318e2e-5883-47aa-b8f9-0265a52826a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "year=2014; month=12;\n",
+    "year=2015; month=3;\n",
     "file_EPM101 = f'/data/brogalla/ANHA4/BLING-EPM101/ANHA4-EPM101_y{year}m{month:02}.nc'\n",
     "dset_bio    = xr.open_dataset(f'{file_EPM101}')\n",
     "bio_ANHA4   = dset_bio['jp_pop'][:,:,:].values\n",
@@ -538,6 +443,24 @@
     "wsink              = np.ones(depths.shape)*16/(3600*24) # convert from m/day to m/s\n",
     "wsink[depths > 80] = (0.05*(depths[depths > 80]-80)+16)/(3600*24) \n",
     "pop_ANHA4          = np.array([bio_ANHA4[d,:,:] / wsink[d] for d in range(0,len(depths))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c3ee0b22-a8e4-465f-82d2-04803b6017f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.nanmin(pop_ANHA4))"
    ]
   },
   {
