Edited boundary conditions to increase ACW Pb and LS Pb, updated observation plots for proper reshaping

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
     "    PML_hot_Pb = 30e-12 # summer polar mixed layer Pb\n",
     "\n",
     "    # Linear interpolate salinity endpoints:\n",
-    "    end_sal = [34.0, AW_sal]\n",
+    "    end_sal = [33.0, AW_sal]\n",
     "    end_dPb = [AO_Pb, AOAW_Pb]\n",
     "    dPb_BC  = np.interp(bdy_sal, end_sal, end_dPb)\n",
     "        \n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +226,11 @@
     "    end_dPb = [PML_Pb, ACW_Pb]\n",
     "    dPb_BC  = np.interp(bdy_temp, end_temp, end_dPb)\n",
     "\n",
+    "    # increase ACW\n",
+    "    end_temp_ACW = [1.5, 2.5]\n",
+    "    end_dPb_ACW  = [6e-12, 10e-12]\n",
+    "    dPb_BC[(bdy_temp > 1.5)] = np.interp(bdy_temp[(bdy_temp > 1.5)], end_temp_ACW, end_dPb_ACW)\n",
+    "    \n",
     "    # wBSW to AL\n",
     "    end_sal_AL = [wBSW_sal, AL_sal]\n",
     "    end_dPb_AL = [wBSW_Pb, AL_Pb]\n",
@@ -243,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +319,7 @@
     "            \"x4\": np.zeros(np.max(dPb_west_BC.shape))\n",
     "        },\n",
     "    )\n",
-    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/Pb_OBC_y{year}m{month:02}.nc', \\\n",
+    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/increase_ACW/Pb_OBC_y{year}m{month:02}.nc', \\\n",
     "                         unlimited_dims='time_counter')\n",
     "#     file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-202209-forcing/Pb_OBC_y{year}m{month:02}.nc', \\\n",
     "#                          unlimited_dims='time_counter')\n",
@@ -331,23 +336,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020\n",
+      "2002\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n"
+      "West BC # of NaNs:  0\n",
+      "2003\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2004\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2005\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2006\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2007\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2008\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2009\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2010\n"
      ]
     }
    ],
    "source": [
-    "for year in range(2020,2021):\n",
+    "for year in range(2002,2022):\n",
     "\n",
     "    print(year)\n",
     "    LS_T  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));     LS_S  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));\n",
