Pb scavenging residence time and negative concentration investigations

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,66 @@
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
       "West BC # of NaNs:  0\n",
-      "2010\n"
+      "2010\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2011\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2012\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2013\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2014\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2015\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2016\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2017\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2018\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2019\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2020\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2021\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n"
      ]
     }
    ],
