--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ceb7b992-af5d-4daf-a254-2a3791343077",
    "metadata": {},
    "outputs": [],
@@ -265,14 +265,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "b2f9a584-e2fd-4528-9359-ff9f04e84730",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_particle_fields(year, month, max_bio=np.nan, max_litho=np.nan, save=False, beta=np.nan):\n",
-    "    beta = 0.005\n",
-    "    \n",
+    "\n",
     "    ANHA12_biogenic = load_bio(year, month)\n",
     "    ANHA12_litho    = load_litho(year, month)\n",
     "    \n",
@@ -285,6 +284,9 @@
     "    biogenic_particles   = np.ones(mesh_bathy.shape)*0.10\n",
     "    lithogenic_particles[:,imin:imax,jmin:jmax] = normalized_lithogenic\n",
     "    biogenic_particles[:,imin:imax,jmin:jmax]   = normalized_biogenic\n",
+    "    \n",
+    "    # put an upper limit of biogenic particle contribution:\n",
+    "    biogenic_particles[(biogenic_particles > 0.06)] = 0.06 \n",
     "\n",
     "    # Fill any weird values \n",
     "    # https://stackoverflow.com/questions/3662361/fill-in-missing-values-with-nearest-neighbour-in-python-numpy-masked-arrays\n",
@@ -307,9 +309,9 @@
     "        if np.isnan(beta):\n",
     "            print('need to define beta')\n",
     "        else:\n",
-    "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/'\n",
+    "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/upper-limit/'\n",
     "            betas  = [0.005]\n",
-    "            save_file(f'{folder}particle0005/', lithogenic_particles*betas[0], biogenic_particles_filled*(1-betas[0]), year, month)\n",
+    "            save_file(f'{folder}', lithogenic_particles*betas[0], biogenic_particles_filled*(1-betas[0]), year, month)\n",
     "#             save_file(f'{folder}particle001/' , lithogenic_particles*betas[1], biogenic_particles*(1-betas[1]), year, month)\n",
     "    \n",
     "    return lithogenic_particles, biogenic_particles_filled"
@@ -389,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "434d3957-2aea-4238-8706-6d76e02646cd",
    "metadata": {},
    "outputs": [
@@ -397,13 +399,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016 1\n"
+      "2014 12\n"
      ]
     }
    ],
    "source": [
-    "for year in range(2016, 2017):\n",
-    "    for month in range(1,2):\n",
+    "for year in range(2014, 2015):\n",
+    "    for month in range(12,13):\n",
     "        print(year, month)\n",
     "        litho, bio = create_particle_fields(year, month, max_bio=2.54467e-4, max_litho=1.83314e-7, save=True, beta=0.00)"
    ]
