added some comments

--- a/particle_tracking/experimentation/tracer-field-debugging.ipynb
+++ b/particle_tracking/experimentation/tracer-field-debugging.ipynb
@@ -5,12 +5,12 @@
    "id": "c556d9fb-d6ec-4142-b9f1-a12140850776",
    "metadata": {},
    "source": [
-    "# Run parcel tracking with tracer"
+    "# Debug parcel tracking with tracer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "b6f3c616-54be-4ab0-87dc-58d35820e7b0",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "9af4396e-a318-4808-8e01-0859b87df8b7",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "1979e62c-2af0-4b79-9d1f-12959e1f26ca",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "7dff4bed-e07e-4133-9dad-a7c329ef5cdf",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "9414b388-6872-4777-a79b-e2f5d93d9b94",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "89d0a983-a2c9-4c11-a950-989f323e86d5",
    "metadata": {},
    "outputs": [],
@@ -146,18 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "5803b42c-e40f-4a28-8221-941c87a5e741",
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_parcels(fieldset, runtime=0, nudging=False, sampling=False):\n",
-    "    \n",
+    "\n",
+    "    # Define particle locations on a grid in my domain:\n",
     "    x = np.arange(-145, -30, 1)\n",
     "    y = np.arange(54, 87, 1)\n",
     "    plon, plat = np.meshgrid(x, y)\n",
     "    pset = ParticleSet(fieldset=fieldset, pclass=PbParticle, lon=plon, lat=plat)\n",
     "    \n",
+    "    # Option to nudge the particle set locations closer to the actual grid locations:\n",
     "    if nudging:        \n",
     "        for i in range(len(pset)):\n",
     "            d = np.hypot((pset.lon[i] - fieldset.U.grid.lon), (pset.lat[i] - fieldset.U.grid.lat))\n",
@@ -165,6 +167,7 @@
     "            pset.xi[i, :] = ind[1]\n",
     "            pset.yi[i, :] = ind[0]\n",
     "    \n",
+    "    # Option to run with tracer sampling kernel (SamplePb) or only with 3D advection kernel\n",
     "    if sampling:\n",
     "        pset.execute(AdvectionRK4_3D + pset.Kernel(SamplePb), \n",
     "                     runtime=runtime, dt=delta(hours=2), recovery={ErrorCode.ErrorOutOfBounds: DeleteParticle})        \n",
@@ -184,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "c503706f-416b-40b0-b577-8ac425582d91",
    "metadata": {},
    "outputs": [],
@@ -236,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "7093393b-34fc-41ed-9c5c-de48b8c5002c",
    "metadata": {},
    "outputs": [
@@ -246,7 +249,7 @@
        "(54.0, 87.0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -422,22 +425,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f15ef0e9-2bde-4732-982a-0bec8d3dc03f",
-   "metadata": {},
-   "source": [
-    "Output:\n",
-    "- Correct cell not found for (173.000000, 88.000000) after 1000000 iterations. \n",
-    "    Debug info: old particle indices: (yi, xi) 0 0. \n",
-    "    New particle indices: (yi, xi) 931 1630. \n",
-    "    Mesh 2d shape:  2400 1632\n",
-    "- Correct cell not found for (-139.000000, 69.000000) after 1000000 iterations. \n",
-    "    Debug info: old particle indices: (yi, xi) 1039 293. \n",
-    "    New particle indices: (yi, xi) 1038 346. \n",
-    "    Mesh 2d shape:  1040 640"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "132a0d90-9522-4679-a482-cec42fc91dcc",
    "metadata": {},
    "source": [
@@ -446,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "0a038907-e2cb-4a4e-9a3f-2bedc4d3ab7c",
    "metadata": {},
    "outputs": [],
@@ -543,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "e98cf7c3-b3c0-49a2-abb9-c30da883a2eb",
    "metadata": {},
    "outputs": [
@@ -553,7 +540,7 @@
        "(54.0, 87.0)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
