created particle fields with different alpha fpop

--- a/paper3/forcing/scavenging-new-field.ipynb
+++ b/paper3/forcing/scavenging-new-field.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "c5e83c6a-06bc-445f-b521-455cd1effae8",
    "metadata": {},
    "outputs": [],
@@ -104,14 +104,14 @@
     "    # Load interpolated fields:\n",
     "    with xr.open_dataset(f'{folder}Pb_scavenging_y{year}m{month:02}.nc') as file:\n",
     "        if return_max:\n",
-    "            return file['lithogenic'].max(), file['biomass'].max(), file['fpop'].max()\n",
+    "            return file['biomass'].max(), file['fpop'].max()\n",
     "        else:\n",
     "            return file['lithogenic'].values, file['biomass'].values, file['fpop'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "def5d73e-ab07-4039-b748-d9d9d33703cb",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "f9399c76-86c2-4e47-b89a-35389b04b16a",
    "metadata": {},
    "outputs": [],
@@ -149,14 +149,17 @@
     "    \n",
     "    # on first call to this function, calculate the maximum values:\n",
     "    if create_fields.counter == 0:\n",
-    "        litho_max, bio_max = find_max(alpha=alpha)\n",
+    "        print('Start calculating max_bio')\n",
+    "        bio_max = find_max(alpha=alpha)\n",
+    "        print('Max_bio = ', bio_max)\n",
     "    \n",
     "    litho, biomass, fpop = open_file('/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/general-particle-fields/', \n",
     "                                     year, month)\n",
     "    \n",
     "    litho_field  = litho / litho_max\n",
     "    sum_bio      = np.add(biomass, alpha*fpop)\n",
-    "    bio_field    = sum_bio**exponent / (bio_max**exponent)\n",
+    "    \n",
+    "    bio_field    = (sum_bio / bio_max)**exponent\n",
     "    \n",
     "    lithogenic_field_final = litho_field * beta\n",
     "    biogenic_field_final   = bio_field * (1-beta)\n",
@@ -171,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "fe266ac1-8a5e-4ed0-a504-b38dcc2908bb",
    "metadata": {},
    "outputs": [],
@@ -179,20 +182,20 @@
     "def find_max(alpha=1):\n",
     "    # use to identify year in which maximum occurs so that moving forward, I only need to load that year\n",
     "    n = 0\n",
-    "    max_litho_list   = np.empty((12*19)); max_litho_list[:]   = np.nan;\n",
-    "    max_biomass_list = np.empty((12*19)); max_biomass_list[:] = np.nan;\n",
-    "    max_fpop_list    = np.empty((12*19)); max_fpop_list[:]    = np.nan;\n",
-    "    max_bio_list     = np.empty((12*19)); max_bio_list[:]     = np.nan;\n",
-    "    \n",
-    "    for year in range(2014,2019):\n",
-    "        print(year)\n",
-    "        for month in range(1,13):\n",
-    "            print(month)\n",
-    "            max_litho_list[n], max_biomass_list[n], max_fpop_list[n] = open_file('/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/general-particle-fields/', \n",
-    "                                                                                  year, month, return_max=True)                \n",
-    "            n+=1\n",
+    "    max_litho_list   = np.empty(len(range(4,9))); max_litho_list[:]   = np.nan;\n",
+    "    max_biomass_list = np.empty(len(range(4,9))); max_biomass_list[:] = np.nan;\n",
+    "    max_fpop_list    = np.empty(len(range(4,9))); max_fpop_list[:]    = np.nan;\n",
+    "\n",
+    "    # year of maximum biomss\n",
+    "    year = 2012\n",
+    "    for month in range(5,9):\n",
+    "        max_biomass_list[n], max_fpop_list[n] = open_file('/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/general-particle-fields/', \n",
+    "                                                            year, month, return_max=True)                \n",
+    "        n+=1\n",
+    "        \n",
+    "    bio_max = np.amax(max_biomass_list + alpha*max_fpop_list)\n",
     "            \n",
-    "    return max_litho_list, max_biomass_list, max_fpop_list"
+    "    return bio_max"
    ]
   },
   {
@@ -228,37 +231,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0cc43fea-38c4-4bf3-b64a-4ee1e17b9028",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_litho, max_biom, max_fpop = find_max(alpha=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "22259dd9-c440-45b8-b479-d594d251b909",
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_folder = '/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/biomass-nonlinear-2-3-capped2/'"
+    "save_folder = '/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/biomass-nonlinear-2-3-fpop-01/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "65fb6ca5-1d72-448a-899e-4b06573c61ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start calculating max_bio\n",
+      "Max_bio =  0.0006704417417495278\n"
+     ]
+    }
+   ],
    "source": [
     "# Set field creation counter for this set of parameters to zero at the start:\n",
     "create_fields.counter = 0\n",
     "\n",
     "for month in range(1,13):   \n",
-    "    create_fields(f'{save_folder}', 2002, month, save=True\n",
-    "                 alpha=1.0, beta=0.005, exponent=2./3., litho_max=np.nan, bio_max=np.nan)\n",
+    "    create_fields(f'{save_folder}', 2002, month, save=True,\\\n",
+    "                 alpha=0.1, beta=0.005, exponent=2./3., litho_max=1.833e-7, bio_max=np.nan)\n",
     "    \n",
     "    \n",
     "# Reset create_fields counter to zero at the end\n",
