add twin y axes for time series

--- a/paper2/M1-river-forcing.ipynb
+++ b/paper2/M1-river-forcing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -238,6 +238,7 @@
     "ax2.plot(months, np.ma.mean(dMn_rivers[:,river_class==3.0], axis=1)*1e9, '.-', \\\n",
     "        markeredgecolor='k', markersize=8, linewidth=2.0, c=color_other2, label='Central')\n",
     "ax2.set_ylim(-10,1700)\n",
+    "# ax2.set_ylim(-10,200)\n",
     "ax2.set_xlabel('Month', fontsize=6)\n",
     "ax2.set_ylabel('Characteristic riverine Mn content [nmol/kg]', fontsize=6)\n",
     "ax2.tick_params(axis='both', labelsize=6, pad=-0.1)\n",
@@ -248,7 +249,7 @@
     "fig.text(0.10, 0.82, 'a)', fontsize=8, weight='bold');\n",
     "fig.text(0.52, 0.82, 'b)', fontsize=8, weight='bold');\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers-paper-202212/M1-river-class.jpg', bbox_inches='tight', dpi=300)"
+    "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers-paper-202212/M1-river-class.jpg', bbox_inches='tight', dpi=300)"
    ]
   },
   {
